// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DDrawer Should append the container to the props.target 1`] = `
<div id="custom-target"><transition-stub enteractiveclass="backdropTransitionEnterActive" leaveactiveclass="backdropTransitionLeaveActive" appear="false" persisted="false" css="true">
    <div class="dBackdrop transitionFast" style="--background-color: var(--color-primary-background); --opacity: 0.5; --z-index: 1000; --position: fixed;"></div>
  </transition-stub><transition-stub enteractiveclass="transitionEnterActive" leaveactiveclass="transitionLeaveActive" appear="false" persisted="false" css="true">
    <aside open="true" role="complementary" aria-modal="true" class="dDrawer right colorSchemePrimary paddingDefaultLarge paddingDefault roundingLarge sizeLarge transitionFast" style="--width: 25%; --height: 25%; --z-index: 1001;">
      <div class="header"><!----><button class="dButton borderPrimarySmall colorSchemePrimary fontSmall outlinePrimarySmall paddingEqualSmall paddingEqual roundingMedium sizeSmall transitionFast closeButton" id="customFocusId">⛌</button></div>
      <nav role="navigation" class="content fontHuge">Plain string content</nav><!---->
    </aside>
  </transition-stub></div>
<div data-v-app=""><!--teleport start--><!--teleport end--></div>
`;

exports[`DDrawer Should render props.content to the component element 1`] = `<nav role="navigation" class="content fontHuge"><b>Some html content</b></nav>`;

exports[`DDrawer Shouldn't move the container to the props.target if props.enableInline is true 1`] = `
<div id="custom-target"></div>
<div data-v-app=""><!--teleport start--><transition-stub enteractiveclass="backdropTransitionEnterActive" leaveactiveclass="backdropTransitionLeaveActive" appear="false" persisted="false" css="true">
    <div class="dBackdrop transitionFast" style="--background-color: var(--color-primary-background); --opacity: 0.5; --z-index: 1000; --position: fixed;"></div>
  </transition-stub><transition-stub enteractiveclass="transitionEnterActive" leaveactiveclass="transitionLeaveActive" appear="false" persisted="false" css="true">
    <aside open="true" role="complementary" aria-modal="true" class="dDrawer right colorSchemePrimary paddingDefaultLarge paddingDefault roundingLarge sizeLarge transitionFast" style="--width: 25%; --height: 25%; --z-index: 1001;">
      <div class="header"><!----><button class="dButton borderPrimarySmall colorSchemePrimary fontSmall outlinePrimarySmall paddingEqualSmall paddingEqual roundingMedium sizeSmall transitionFast closeButton" id="why-not">⛌</button></div>
      <nav role="navigation" class="content fontHuge">Plain string content</nav><!---->
    </aside>
  </transition-stub><!--teleport end--></div>
`;
